test/integration/rstanarm/functions/pretty.expected
  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format SSfunctions.stan

Syntax error in 'SSfunctions.stan', line 1, column 0 to column 6, parsing error:
   -------------------------------------------------
     1:  vector SS_asymp(vector input, matrix Phi_);
               ^
     2:  vector SS_asympOff(vector input, matrix Phi_);
     3:  vector SS_asympOrig(vector input, matrix Phi_);
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format bernoulli_likelihoods.stan

Syntax error in 'bernoulli_likelihoods.stan', line 8, column 3 to column 5, parsing error:
   -------------------------------------------------
     6:     * @param link An integer indicating the link function
     7:     * @return A vector, i.e. inverse-link(eta)
     8:     */
              ^
     9:    vector linkinv_bern(vector eta, int link) {
    10:      if (link == 1)      return(inv_logit(eta)); // logit
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format binomial_likelihoods.stan

Syntax error in 'binomial_likelihoods.stan', line 7, column 3 to column 5, parsing error:
   -------------------------------------------------
     5:     * @param link An integer indicating the link function
     6:     * @return A vector, i.e. inverse-link(eta)
     7:     */
              ^
     8:    vector linkinv_binom(vector eta, int link) {
     9:      if (link == 1)      return(inv_logit(eta)); // logit
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format common_functions.stan

Syntax error in 'common_functions.stan', line 1, column 30 to line 18, column 5, parsing error:
   -------------------------------------------------
    16:     * @param z_T Vector used in the onion method for creating Cholesky factors
    17:     * @return A vector that corresponds to theta in lme4
    18:     */
              ^
    19:    vector make_theta_L(int len_theta_L, int[] p, real dispersion,
    20:                        vector tau, vector scale, vector zeta,
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format continuous_likelihoods.stan

Syntax error in 'continuous_likelihoods.stan', line 7, column 3 to column 5, parsing error:
   -------------------------------------------------
     5:     * @param link An integer indicating the link function
     6:     * @return A vector, i.e. inverse-link(eta)
     7:     */
              ^
     8:    vector linkinv_gauss(vector eta, int link) {
     9:      if (link == 1)      return eta;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format count_likelihoods.stan

Syntax error in 'count_likelihoods.stan', line 8, column 3 to column 5, parsing error:
   -------------------------------------------------
     6:     * @param link An integer indicating the link function
     7:     * @return A vector, i.e. inverse-link(eta)
     8:     */
              ^
     9:    vector linkinv_count(vector eta, int link) {
    10:      if (link == 1)      return exp(eta);     // log
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format jm_functions.stan

Syntax error in 'jm_functions.stan', line 9, column 2 to column 4, parsing error:
   -------------------------------------------------
     7:    *   of the prior distribution
     8:    * @return A vector, corresponding to the scaled auxiliary parameters
     9:    */
             ^
    10:    vector make_basehaz_coef(vector aux_unscaled, int prior_dist,
    11:                             vector prior_mean, vector prior_scale) {
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="../" --auto-format mvmer_functions.stan

Syntax error in 'mvmer_functions.stan', line 6, column 2 to column 4, parsing error:
   -------------------------------------------------
     4:    * @param prior_dist An integer indicating the prior distribution
     5:    * @return An integer
     6:    */
             ^
     7:    int get_nvars_for_hs(int prior_dist) {
     8:      int hs = 0;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


